# pathtracer

./: Cargo.toml
src/: camera.rs  convex.rs  half_plane.rs  hittable.rs  main.rs  sphere.rs
