[package]
name = "pathtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
cgmath = "0.18.0"
num-traits = "0.2.15"
rand = { version = "0.8.5", features=["small_rng"] }
rayon = "1.7.0"
